SERVER-20935 do not attempt to attach shard version to OpCtx inside direct client