jstests/aggregation/bugs/server7781.js
@@ -116,6 +116,21 @@ function test(db, sharded, indexType) {
     aggCmd.$geoNear.near = queryPoint;
     aggArr = [aggCmd, {$limit: 50}, {$limit:60}, {$limit:40}];
     checkOutput(db.runCommand(geoCmd), db[coll].aggregate(aggArr), 40);
+
+    // Test $geoNear with an initial batchSize of 0. Regression test for SERVER-20935.
+    queryPoint = pointMaker.mkPt(0.25);
+    geoCmd.spherical = true;
+    geoCmd.near = queryPoint;
+    geoCmd.limit = 70;
+    delete geoCmd.num;
+    aggCmd.$geoNear.spherical = true;
+    aggCmd.$geoNear.near = queryPoint;
+    aggCmd.$geoNear.limit = 70;
+    delete aggCmd.$geoNear.num;
+    var cmdRes = db[coll].runCommand("aggregate", {pipeline: [aggCmd], cursor: {batchSize: 0}});
+    assert.commandWorked(cmdRes);
+    var cmdCursor = new DBCommandCursor(db[coll].getMongo(), cmdRes, 0);
+    checkOutput(db.runCommand(geoCmd), cmdCursor, 70);
 }
 
 test(db, false, '2d');
